--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,10 @@ ol, ul {
   width: 34px;
 }
 
+.square.win {
+    color: green;
+}
+
 .square:focus {
   outline: none;
 }
@@ -47,4 +51,9 @@ ol, ul {
 
 .game-info {
   margin-left: 20px;
+}
+
+button.active
+{
+    font-weight: 700;
 }
